<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="dark">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="link">https://practicum.yandex.ru/android-developer/</string>
    <string name="text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_message">Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="mail_adress">RulezZzZzko@ya.ru</string>
    <string name="link_offer">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="test">тест</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью "\n\n" Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="mediateka">Медиатека</string>
    <string name="back">Назад</string>
    <string name="history_of_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="trackTime">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer">00:00</string>
    <string name="mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_not_created">Вы не создали "\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_creating">Завершить создание плейлиста?</string>
    <string name="data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="no_tracks">0 треков</string>
    <string name="no_duration">0 минут</string>
    <string name="toast_track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="toast_track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_want_delete_playlist">Хотите удалить плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="have_no_tracks">В этом плейлисте еще нет треков</string>


    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name ="duration">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>