<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Toolbar
        android:layout_marginTop="@dimen/margin_top"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        android:title="@string/settings"
        android:titleTextColor="@color/black"
        android:gravity="center_vertical"
        android:navigationIcon="@drawable/arrow_back"
        />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_top"
        android:paddingStart="@dimen/inner_pad"
        android:paddingEnd="@dimen/switch_end"
        android:text="@string/dark"
        android:titleTextColor="@color/black"
        android:minHeight="@dimen/height_view"
        />
    <TextView
        android:layout_height="@dimen/height_view"
        android:layout_width="match_parent"
        android:text="@string/share"
        android:titleTextColor="@color/black"
        android:textSize="@dimen/text_size2"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/inner_pad"
        android:paddingStart="@dimen/inner_pad"
        app:drawableEndCompat="@drawable/share"
        />
    <TextView
        android:layout_height="@dimen/height_view"
        android:layout_width="match_parent"
        android:text="@string/support"
        android:titleTextColor="@color/black"
        android:textSize="@dimen/text_size2"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/inner_pad"
        android:paddingStart="@dimen/inner_pad"
        app:drawableEndCompat="@drawable/support"
        />
    <TextView
        android:layout_height="@dimen/height_view"
        android:layout_width="match_parent"
        android:text="@string/agreement"
        android:titleTextColor="@color/black"
        android:textSize="@dimen/text_size2"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/inner_pad"
        android:paddingStart="@dimen/inner_pad"
        app:drawableEndCompat="@drawable/arrow_forward"
        />
</LinearLayout>