<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="22dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_back"
        style="@style/colorToolbar"
        app:title="@string/search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height">

        <EditText
            android:id="@+id/edit_text"
            style="@style/colorSearchField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pad_36"
            android:layout_marginTop="@dimen/pad_8"
            android:layout_marginBottom="@dimen/pad_8"
            android:drawableStart="@drawable/ic_search_16"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:saveEnabled="false"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/pad_18"
            android:paddingEnd="@dimen/pad_28"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_view" />

        <LinearLayout
            android:id="@+id/not_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:gravity="center"
                android:src="@drawable/ic_not_found_120" />

            <TextView
                style="@style/errorText"
                android:text="@string/not_found" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/connection_problem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="102dp"
                android:src="@drawable/ic_connection_problem_120" />

            <TextView
                style="@style/errorText"
                android:text="@string/connection_problem" />

            <Button
                android:id="@+id/reload"
                style="@style/buttonReloadColor"
                android:layout_width="91dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:text="@string/reload"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_of_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="35dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:letterSpacing="0"
                android:text="@string/history_of_search"
                android:textColor="@color/black_white_color"
                android:textFontWeight="500"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_history"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/track_view" />

            <Button
                android:id="@+id/clear_history"
                style="@style/buttonReloadColor"
                android:layout_width="148dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="24dp"
                android:text="@string/clear_history"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </FrameLayout>


</LinearLayout>