<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/player"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvvm.player.ui.PlayerFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/baselineLeft16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/baselineRight16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/baselineLeft24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/baselineRight24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/colorToolbarWithArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/placeholder"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder_45"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/baselineRight24"
        app:layout_constraintStart_toStartOf="@id/baselineLeft24"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:shapeAppearanceOverlay="@style/roundCorners8" />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        app:layout_constraintEnd_toEndOf="@id/baselineRight24"
        app:layout_constraintStart_toStartOf="@id/baselineLeft24"
        app:layout_constraintTop_toBottomOf="@id/placeholder" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:letterSpacing="0"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/buttonPlay"
        app:layout_constraintEnd_toEndOf="@id/baselineRight24"
        app:layout_constraintStart_toStartOf="@id/baselineLeft24"
        app:layout_constraintTop_toBottomOf="@id/trackName" />

    <ImageButton
        android:id="@+id/buttonPlay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_button_play_100"
        app:layout_constraintBottom_toTopOf="@id/trackTime"
        app:layout_constraintEnd_toStartOf="@id/buttonLike"
        app:layout_constraintStart_toEndOf="@id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/timer"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/baselineRight16"
        app:layout_constraintStart_toStartOf="@id/baselineLeft16"
        app:layout_constraintTop_toBottomOf="@id/buttonPlay" />

    <ImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_button_add_in_playlist"
        app:layout_constraintBottom_toTopOf="@id/trackTime"
        app:layout_constraintStart_toStartOf="@id/baselineLeft24"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        tools:ignore="ContentDescription"/>

    <ImageButton
        android:id="@+id/buttonLike"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_button_like_51"
        app:layout_constraintBottom_toTopOf="@id/trackTime"
        app:layout_constraintEnd_toEndOf="@id/baselineRight24"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/trackTime"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/trackTime"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toStartOf="@id/valueTrackTime"
        app:layout_constraintStart_toStartOf="@id/baselineLeft16"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <TextView
        android:id="@+id/album"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/album"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/valueAlbum"
        app:layout_constraintStart_toStartOf="@id/baselineLeft16"
        app:layout_constraintTop_toBottomOf="@id/trackTime" />

    <TextView
        android:id="@+id/year"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/year"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toStartOf="@id/valueYear"
        app:layout_constraintStart_toStartOf="@id/baselineLeft16"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/genre"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/genre"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toStartOf="@id/valueGenre"
        app:layout_constraintStart_toStartOf="@id/baselineLeft16"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/country"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:text="@string/country"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/valueCountry"
        app:layout_constraintStart_toStartOf="@id/baselineLeft16"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/valueTrackTime"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical|end"
        app:layout_constraintBottom_toTopOf="@id/valueAlbum"
        app:layout_constraintEnd_toEndOf="@id/baselineRight16"
        app:layout_constraintStart_toEndOf="@id/trackTime"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <TextView
        android:id="@+id/valueAlbum"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical|end"
        app:layout_constraintBottom_toTopOf="@id/valueYear"
        app:layout_constraintEnd_toEndOf="@id/baselineRight16"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintTop_toBottomOf="@id/valueTrackTime" />

    <TextView
        android:id="@+id/valueYear"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical|end"
        app:layout_constraintBottom_toTopOf="@id/valueGenre"
        app:layout_constraintEnd_toEndOf="@id/baselineRight16"
        app:layout_constraintStart_toEndOf="@id/year"
        app:layout_constraintTop_toBottomOf="@id/valueAlbum" />

    <TextView
        android:id="@+id/valueGenre"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical|end"
        app:layout_constraintBottom_toTopOf="@id/valueCountry"
        app:layout_constraintEnd_toEndOf="@id/baselineRight16"
        app:layout_constraintStart_toEndOf="@id/genre"
        app:layout_constraintTop_toBottomOf="@id/valueYear" />

    <TextView
        android:id="@+id/valueCountry"
        style="@style/textTrackAttributes"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:gravity="center_vertical|end"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/baselineRight16"
        app:layout_constraintStart_toEndOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/valueGenre" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_bottom_sheet"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_shape_button_create" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/add_in_playlist"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="19sp" />

        <Button
            android:id="@+id/buttonCreate"
            style="@style/buttonReload"
            android:layout_width="135dp"
            android:layout_height="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_playlist"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/platlist_view_little" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>